fix z-index

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -102,7 +102,7 @@
 
   &__bottom-line {
     margin-bottom: 50px;
-    grid-column: 1 / 7;
+    grid-column: 1 / 6;
     display: flex;
     align-items: center;
     gap: 20px;
