--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -13,7 +13,7 @@
 
     &:has(.page__menu:target) {
       overflow: hidden;
-      z-index: 1;
+      z-index: 2;
     }
   }
 
@@ -67,8 +67,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
-
+    z-index: 3;
     transition: all $transitionDuration;
     opacity: 0;
     transform: translateY(-100%);
