--- a/src/styles/blocks/visit.scss
+++ b/src/styles/blocks/visit.scss
@@ -1,4 +1,5 @@
 .visit {
+  max-height: 800px;
   color: $c-white;
   background-color: $c-green;
 
@@ -80,8 +81,8 @@
       z-index: 1;
       left: 0;
       bottom: 0;
-      height: 70vh;
-      width: 30%;
+      height: 65vh;
+      width: 25%;
     }
   }
 }
